--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,25 +1,22 @@
-# FROM python:3.7 AS build
-# WORKDIR /openfisca_pf
-# COPY openfisca_pf .
-# COPY Makefile .
-# COPY openfisca .
-# COPY *.py ./
-# RUN make install
-
-
-# FROM python:3.7
-# WORKDIR /openfisca_pf
-# COPY --from=build openfisca_pf ./
-# CMD ["ls", "-l"]
-# CMD ["./openfisca", "serve", "--configuration-file", "config.py"]
-# openfisca serve --configuration-file config.py
-
-FROM python:3.7
+FROM python:3.7-slim AS build
+RUN apt-get update
+RUN apt-get install -y --no-install-recommends build-essential gcc
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
 WORKDIR /openfisca_main
 COPY openfisca_pf ./openfisca_pf
 COPY Makefile .
-# COPY openfisca .
 COPY *.py ./
 RUN make install
+RUN ls -ltra /
+
+FROM python:3.7-slim
+COPY --from=build /opt/venv /opt/venv
+COPY --from=build /root/.cache/pip /root/.cache/pip
+ENV PATH="/opt/venv/bin:$PATH"
+WORKDIR /openfisca_main
+COPY --from=build /openfisca_main/config.py .
+COPY --from=build /openfisca_main/openfisca_pf ./openfisca_pf
+
 CMD ["openfisca", "serve", "--configuration-file", "config.py"]
 EXPOSE 5000/tcp
