--- a/openfisca_pf/parameters/dicp/it/abattements_it/ventes.yaml
+++ b/openfisca_pf/parameters/dicp/it/abattements_it/ventes.yaml
@@ -2,7 +2,7 @@ description: Taux d'abattement applicables pour le calcul de l'IT
 metadata:
   reference: https://law.gov.example/basic-income/amount
 apport_en_societe:
-  description: APPORT EN SOCIETE
+  description: Apport en société
   coeff_assiette:
     values:
       2020-01-01: 1
@@ -16,6 +16,7 @@ apport_en_societe:
     values:
       2020-01-01: 1
 bagettes_revente_au_detail:
+  description: Bagettes revente au détail
   coeff_assiette:
     values:
       2020-01-01: 0.7
@@ -29,6 +30,7 @@ bagettes_revente_au_detail:
     values:
       2020-01-01: 1
 ventes_sans_abattement:
+  description: Ventes sans abattement
   coeff_assiette:
     values:
       2020-01-01: 0
@@ -42,6 +44,7 @@ ventes_sans_abattement:
     values:
       2020-01-01: 1
 ventes_inferieur_20_millions:
+  description: Ventes < 20 millions
   coeff_assiette:
     values:
       2020-01-01: 0
