--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,7 @@ ignore       = E128,E251,F403,F405,E501,W503
 hang-closing = true
 ignore       = E128,E251,F403,F405,E501,W503
 in-place     = true
+
+[tool:pytest]
+addopts      = --showlocals --doctest-modules --disable-pytest-warnings
+testpaths    = tests
