--- a/openfisca_pf/tests/dicp/it/cas_de_tests_activite_simple_prestations.yaml
+++ b/openfisca_pf/tests/dicp/it/cas_de_tests_activite_simple_prestations.yaml
@@ -143,7 +143,7 @@
   input:
     entreprise:
       entreprise_est_personne_physique: true
-      releve_de_charges_fourni: true
+      releve_de_charges_fourni: false
       annexes_IT_fournies: false
       chiffre_affaire_location_meublee: 100000000
       charges_location_meublee: 0
